--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Online Quran Teaching</title>
+  <title>Easy Online Quran Teaching</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container nav-container">
-      <h1>Quran Teach</h1>
+      <h1>Easy Online Quran Teaching</h1>
       <nav>
         <a href="#courses">Courses</a>
         <a href="#register">Register</a>
@@ -33,22 +33,22 @@
   <h2>Our Courses</h2>
   <div class="grid">
     <div class="card">
-      <img src="images/basic-reading.jpg" alt="Basic Quran Reading">
+      <img src="basic-reading.jpg" alt="Basic Quran Reading">
       <h3>Basic Quran Reading</h3>
       <p>Learn how to read the Quran with proper pronunciation, starting from the Arabic alphabet.</p>
     </div>
     <div class="card">
-      <img src="images/tajweed.jpg" alt="Tajweed & Pronunciation">
+      <img src="tajweed.jpg" alt="Tajweed & Pronunciation">
       <h3>Tajweed & Pronunciation</h3>
       <p>Master the rules of Tajweed to recite the Quran accurately and beautifully.</p>
     </div>
     <div class="card">
-      <img src="images/hifz.jpg" alt="Memorization (Hifz)">
+      <img src="hifz.jpg" alt="Memorization (Hifz)">
       <h3>Memorization (Hifz)</h3>
       <p>Systematic memorization of the Quran with personal guidance and tracking tools.</p>
     </div>
     <div class="card">
-      <img src="images/translation.jpg" alt="Quran Translation">
+      <img src="translation.jpg" alt="Quran Translation">
       <h3>Quran Translation</h3>
       <p>Understand the meanings of the Quran with word-by-word and thematic translations.</p>
     </div>
@@ -69,12 +69,13 @@
 
   <section id="contact" class="container">
     <h2>Contact Us</h2>
-    <p>Email: info@quranteach.com</p>
-    <p>Phone: +123-456-7890</p>
+    <p>Email: haseeb13rehmani@gmail.com</p>
+    <p>Phone: +92 312 2102240</p>
+    <p>WhatsApp: +92 312 2102240</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Quran Teach. All rights reserved.</p>
+    <p>&copy; 2025 Easy Online Quran Teaching. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
